Merge pull request #33 from softleader/support-java1.8
Support Java 8