@@ -20,6 +20,7 @@
  */
 package tw.com.softleader.data.jpa.spec.domain;
 
+import java.util.Arrays;
 import java.util.List;
 import javax.persistence.criteria.CriteriaBuilder;
 import javax.persistence.criteria.CriteriaQuery;
@@ -28,6 +29,7 @@ import javax.persistence.criteria.Predicate;
 import javax.persistence.criteria.Root;
 import lombok.NonNull;
 import lombok.ToString;
+import lombok.val;
 import org.springframework.data.jpa.domain.Specification;
 
 /**
@@ -44,7 +46,7 @@ public class JoinFetch<T> implements Specification<T> {
       @NonNull String[] pathsToFetch,
       @NonNull JoinType joinType,
       boolean distinct) {
-    this.pathsToFetch = List.of(pathsToFetch);
+    this.pathsToFetch = Arrays.asList(pathsToFetch);
     this.joinType = joinType;
     this.distinct = distinct;
 
@@ -69,14 +71,14 @@ public class JoinFetch<T> implements Specification<T> {
       }
       return;
     }
-    var pathToFetch = pathsToFetch.get(0);
+    val pathToFetch = pathsToFetch.get(0);
     if (!pathToFetch.contains(".")) {
       root.fetch(pathToFetch, joinType);
       return;
     }
-    var byDot = pathToFetch.split("\\.");
-    var alias = byDot[0];
-    var path = byDot[1];
+    val byDot = pathToFetch.split("\\.");
+    val alias = byDot[0];
+    val path = byDot[1];
     root.fetch(alias).fetch(path, joinType);
   }
 }
